@@ -104,10 +104,8 @@ import org.wso2.ballerinalang.util.RepoUtils;
 import java.io.File;
 import java.io.IOException;
 import java.lang.reflect.Modifier;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -159,6 +157,7 @@ public class CommonUtil {
     public static final String URI_SCHEME_EXPR = "expr";
     public static final String URI_SCHEME_FILE = "file";
     public static final String LANGUAGE_ID_BALLERINA = "ballerina";
+    public static final String LANGUAGE_ID_TOML = "toml";
 
     public static final String MARKDOWN_MARKUP_KIND = "markdown";
 
@@ -1098,23 +1097,25 @@ public class CommonUtil {
     }
 
     /**
-     * Get the path from given string URI. Even if the given URI's scheme is expr, we convert it to file scheme and
-     * provide a valid Path
+     * Get the path from given string URI. Even if the given URI's scheme is expr or bala,
+     * we convert it to file scheme and provide a valid Path.
      *
-     * @param uri file uri
+     * @param fileUri file uri
      * @return {@link Optional} Path from the URI
      */
-    public static Optional<Path> getPathFromURI(String uri) {
-        URI fileUri = URI.create(uri);
-        if (fileUri.getScheme().equals(EXPR_SCHEME)) {
-            String newUri = fileUri.toString().replace(EXPR_SCHEME + ":", "file:");
-            try {
-                return Optional.of(Paths.get(new URL(newUri).toURI()));
-            } catch (URISyntaxException | MalformedURLException e) {
-                return Optional.empty();
+    public static Optional<Path> getPathFromURI(String fileUri) {
+        URI uri = URI.create(fileUri);
+        String scheme = uri.getScheme();
+        try {
+            if (EXPR_SCHEME.equals(uri.getScheme()) || URI_SCHEME_BALA.equals(uri.getScheme())) {
+                scheme = URI_SCHEME_FILE;
             }
+            URI converted = new URI(scheme, uri.getUserInfo(), uri.getHost(), uri.getPort(),
+                    uri.getPath(), uri.getQuery(), uri.getFragment());
+            return Optional.of(Paths.get(converted));
+        } catch (URISyntaxException e) {
+            return Optional.empty();
         }
-        return Optional.of(Paths.get(fileUri));
     }
 
     /**
@@ -1139,7 +1140,7 @@ public class CommonUtil {
      * @throws URISyntaxException URI parsing errors
      */
     public static String convertUriSchemeFromBala(String fileUri) throws URISyntaxException {
-        URI uri = new URI(fileUri);
+        URI uri = URI.create(fileUri);
         if (URI_SCHEME_BALA.equals(uri.getScheme())) {
             URI converted = new URI(URI_SCHEME_FILE, uri.getUserInfo(), uri.getHost(), uri.getPort(),
                     uri.getPath(), uri.getQuery(), uri.getFragment());
@@ -1160,7 +1161,7 @@ public class CommonUtil {
                                            Path filePath) throws URISyntaxException {
         LSClientCapabilities clientCapabilities = serverContext.get(LSClientCapabilities.class);
         if (clientCapabilities.getInitializationOptions().isBalaSchemeSupported()) {
-            return getBalaUriForPath(filePath);
+            return getUriForPath(filePath, URI_SCHEME_BALA);
         }
         return filePath.toUri().toString();
     }
@@ -1169,12 +1170,13 @@ public class CommonUtil {
      * Returns the URI with bala scheme for the provided file path.
      *
      * @param filePath File path
-     * @return URI with bala scheme
+     * @param scheme URI Scheme
+     * @return URI with the given scheme
      * @throws URISyntaxException URI parsing errors
      */
-    private static String getBalaUriForPath(Path filePath) throws URISyntaxException {
+    public static String getUriForPath(Path filePath, String scheme) throws URISyntaxException {
         URI uri = filePath.toUri();
-        uri = new URI(URI_SCHEME_BALA, uri.getUserInfo(), uri.getHost(), uri.getPort(),
+        uri = new URI(scheme, uri.getUserInfo(), uri.getHost(), uri.getPort(),
                 uri.getPath(), uri.getQuery(), uri.getFragment());
         return uri.toString();
     }
